Finalized changes for economic models

--- a/OkunsLaw.ipynb
+++ b/OkunsLaw.ipynb
@@ -148,6 +148,121 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4acc0864-38ad-4398-aa6c-b7a663ca6efe",
+   "metadata": {},
+   "source": [
+    "### What are some countries causing outliers?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "649a736b-8038-4a94-b7c9-e1952d6b3494",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "116354\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LOCATION</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>VAR</th>\n",
+       "      <th>Variable</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>TIME</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Unit Code</th>\n",
+       "      <th>Unit</th>\n",
+       "      <th>PowerCode Code</th>\n",
+       "      <th>PowerCode</th>\n",
+       "      <th>Reference Period Code</th>\n",
+       "      <th>Reference Period</th>\n",
+       "      <th>GDP_change</th>\n",
+       "      <th>Flag Codes</th>\n",
+       "      <th>Flags</th>\n",
+       "      <th>unemployment_change</th>\n",
+       "      <th>okun_pred</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>116354</th>\n",
+       "      <td>LBY</td>\n",
+       "      <td>Libya</td>\n",
+       "      <td>NY_GDP_MKTP_KD_ZG</td>\n",
+       "      <td>GDP growth</td>\n",
+       "      <td>T</td>\n",
+       "      <td>Total</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>GRWH</td>\n",
+       "      <td>Growth rate</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Units</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>104.4868</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.415998</td>\n",
+       "      <td>-30.14604</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       LOCATION Country                VAR    Variable SEX    Sex  TIME  Year  \\\n",
+       "116354      LBY   Libya  NY_GDP_MKTP_KD_ZG  GDP growth   T  Total  2012  2012   \n",
+       "\n",
+       "       Unit Code         Unit  PowerCode Code PowerCode  \\\n",
+       "116354      GRWH  Growth rate               0     Units   \n",
+       "\n",
+       "        Reference Period Code  Reference Period  GDP_change Flag Codes Flags  \\\n",
+       "116354                    NaN               NaN    104.4868        NaN   NaN   \n",
+       "\n",
+       "        unemployment_change  okun_pred  \n",
+       "116354            -0.415998  -30.14604  "
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ind = df_growth[['GDP_change']].idxmax()\n",
+    "print(ind.values[0])\n",
+    "df_growth.loc[ind]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "31c56fc3-c243-4f5f-8c5f-7e682dbf9365",
    "metadata": {},
    "source": [
