--- a/Unemployment_rate_prediction_USA_ARMA.ipynb
+++ b/Unemployment_rate_prediction_USA_ARMA.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1=pd.read_excel('emp-unemployment.xls')"
+    "df1=pd.read_excel('data/emp-unemployment.xls')"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2=pd.read_excel('UnemploymentReport.xlsx')"
+    "df2=pd.read_excel('data/UnemploymentReport.xlsx')"
    ]
   },
   {
